--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Typify by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -17,8 +18,11 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2><strong>Typify</strong> is a free responsive site template</h2>
-				<p>Brought to you by Templated</p>
+				<h2>
+					The <strong>BASH</strong> tools showcase,<br/>
+					for universal developer.
+				</h2>
+				<p>Brought to you by Javanile</p>
 				<ul class="actions">
 					<li><a href="#" class="button special">Get started</a></li>
 				</ul>
@@ -495,7 +499,8 @@ print 'It took ' + i + ' iterations to sort the deck.';
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					&copy; Untitled. Design: <a href="http://templated.co/">TEMPLATED</a>.
+					(C) 2020 <a href="https://www.javanile.org" target="_blank">Javanile</a>
+					| Design by <a href="http://templated.co/" target="_blank">TEMPLATED</a>
 				</div>
 			</footer>
 
