--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>
-					The <strong>BASH</strong> tools showcase,<br/>
-					for universal developer.
+					The <strong>BASH</strong> tools showcase, \<br/>
+					for the modern programmer.
 				</h2>
 				<p>Brought to you by Javanile</p>
 				<ul class="actions">
@@ -32,7 +32,7 @@
 			<section id="one" class="wrapper special">
 				<div class="inner">
 					<header class="major">
-						<h2>Lorem ipsum feugiat tempus</h2>
+						<h2>Build around a modern BASH suite</h2>
 					</header>
 					<div class="features">
 						<div class="feature">
