--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Typify by TEMPLATED</title>
+		<title>BASH by Javanile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -19,10 +19,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>
-					The <strong>BASH</strong> tools showcase, \<br/>
-					for the modern programmer.
+					Lowly <strong>BASH</strong> toolkit, \<br/>
+					for the modern coder.
 				</h2>
-				<p>Brought to you by Javanile</p>
+				<p>Brought to you by real-life coding</p>
 				<ul class="actions">
 					<li><a href="#" class="button special">Get started</a></li>
 				</ul>
