--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>
-					Lowly <strong>BASH</strong> toolkit, \<br/>
-					for the modern coder.
+					Lowly <strong>BASH</strong> toolkit \<br/>
+					for the modern coder
 				</h2>
 				<p>Brought to you by real-life coding</p>
 				<ul class="actions">
